# lorcanaCompendium

./: LICENSE  README.md
src/: CMakeLists.txt  main.cpp
